<resources>
    <string name="app_name">LoginAppIntro2</string>

    <string name="intro_frase_um">Bem-vindo</string>
    <string name="intro_frase_dois">Pequenas tarefas, grandes conquistas</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>



</resources>